# ducklake-cdc-extension

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  VISION.md  extension_config.cmake  pyproject.toml
.githooks/: pre-commit
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  full-ci.yml  light-ci.yml  release.yml
bench/: README.md  empty-window.yaml  light.yaml  runner.py
bench/results/: empty-window-20260501T073742Z-a738914965e2.json  light-v020.json  light-v030.json  light-v031.json  light-v032.json
clients/python/: README.md  docker-compose.yml  draft.md  pyproject.toml
clients/python/demo/: analytics.py  common.py  consumer.py  demosink.py  producer.py
clients/python/playground/: 01_local_ducklake.py
clients/python/src/ducklake/: __init__.py  _connection.py  config.py  lake.py  session.py
clients/python/src/ducklake_cdc/: __init__.py  app.py  client.py  combinators.py  consumer.py  loop.py  lowlevel.py  models.py  sinks.py  sql.py  types.py
clients/python/tests/: test_app.py  test_cdc_client.py  test_cdc_models.py  test_cdc_sql.py  test_config.py  test_consumer_loop.py  test_consumers.py  test_demo_analytics.py  test_demo_common.py  test_demo_consumer.py  test_demo_producer.py  test_import.py  test_lake_table.py
docs/: api.md  compatibility.md  design.md  development.md  errors.md  hazard-log.md  performance.md  roadmap.md  security.md  upstream-asks.md  upstream_asks.md
docs/conventions/: outbox-metadata.md
docs/decisions/: 0000-template.md  0001-extension-language.md  0002-hybrid-discovery-read.md  0003-license.md  0004-overlap-audit.md  0005-extension-vs-library.md  0006-schema-version-boundaries.md  0007-concurrency-model.md  0008-ddl-events.md  0009-consumer-state-schema.md  0010-audit-log.md  0011-performance-model.md  0012-branching-ci-release.md  0013-versioning-and-release-automation.md
docs/demo/phase1/: README.md
docs/operational/: audit-limitations.md  inlined-data-edge-cases.md  isolation.md  lease.md  wait.md
docs/roadmap/: README.md  phase_0_discovery.md  phase_1_extension_mvp.md  phase_2_backend_agnostic.md  phase_3_python_client.md  phase_4_go_client.md  phase_5_beta.md
e2e/: README.md  ci_demo_assertions.py  docker-compose.yml  garage.toml  pyproject.toml  setup-garage.sh
e2e/01_pipeline_dag/: README.md  app.py  inspect_lake.py  test_restart.sh
e2e/01_schema_safe_consumer/: README.md  app.py
e2e/02_incremental_materialized_view/: README.md  app.py
e2e/02_ticks/: README.md  app.py
e2e/03_backfill_live_catchup/: README.md  app.py
e2e/03_publish_redis/: README.md
e2e/04_audit_log/: README.md
e2e/04_cache_refresh/: README.md  app.py
e2e/05_pipeline_dag/: README.md  app.py
e2e/05_reverse_etl/: README.md
e2e/_lib/: README.md  __init__.py  cli.py  config.py  load.py  metrics.py  stage.py  tui.py
e2e/benchmark/: README.md  analytics.py  bursty.yaml  common.py  constants.py  consumer.py  fanout.yaml  latency.yaml  light.yaml  mutation_heavy.yaml  producer.py  pyproject.toml  runner.py  throughput.yaml  timed_dml_consumer.py
e2e/benchmark/sinks/: __init__.py  dashboard.py  stats.py
e2e/catalog_matrix/: README.md  catalog_matrix_smoke.py
e2e/pgbouncer/: pgbouncer.ini
e2e/smoke/: README.md  _harness_env.py  _repro_force_release_empty.py  adaptive_listen_coalesce_smoke.py  cdc_wait_interrupt_smoke.py  compat_warning_smoke.py  ddl_postgres_listener_progress_smoke.py  enumerate_changes_map.py  h022_atlas_setup_smoke.py  lease_multiconn_smoke.py  postgres_state_isolation_smoke.py  toctou_expire_smoke.py
e2e/smoke/output/: duckdb.json  postgres.json  snapshots_changes_map_reference.md  sqlite.json
e2e/upstream/: README.md  enumerate_changes_map.py
e2e/upstream/output/: postgres.json  snapshots_changes_map_reference.md
examples/: 01_basic_consumer.sql  01_new_api_consumer.sql  02_new_api_listen.sql  02_outbox_demo.sql  03_long_poll.sql  03_new_api_ddl.sql  04_schema_change.sql  05_recent_changes.sql  06_parallel_readers.sql  07_ddl_only_consumer.sql  08_cross_schema_window.sql  09_lease_recovery.sql
scripts/: bootstrap-template.py  bump-duckdb-version.sh
src/: compat_check.cpp  consumer.cpp  consumer_state.cpp  ddl.cpp  dml.cpp  ducklake_cdc_extension.cpp  ducklake_metadata.cpp  stats.cpp
src/include/: compat_check.hpp  consumer.hpp  consumer_state.hpp  ddl.hpp  dml.hpp  ducklake_cdc_extension.hpp  ducklake_metadata.hpp  stats.hpp
test/: README.md  compat_check.test  configuration.test  consumer_lifecycle.test  ddl_changes.test  ddl_ticks.test  dml_changes.test  dml_schema_shape_pinning.test  dml_ticks.test  ducklake_cdc.test  new_api_contract.test  observability.test  retention_gap.test  schema_diff.test  version_and_load.test
test/catalog_matrix/: README.md  catalog_matrix_smoke.py  docker-compose.yml
test/client_go/: README.md
test/client_py/: README.md
test/smoke/: README.md  adaptive_listen_coalesce_smoke.py  cdc_wait_interrupt_smoke.py  compat_warning_smoke.py  lease_multiconn_smoke.py  toctou_expire_smoke.py
test/sql/: always_breaks.test  compat_check.test  consumer_state.test  ddl_stage2.test  dml_schema_shape_pinning.test  ducklake_cdc.test  new_api_contract.test  notices_validation.test  observability.test  recent_sugar.test  subscriptions_identity.test  sugar.test  verified_surface_tdd.test
test/upstream/: README.md  docker-compose.yml  enumerate_changes_map.py
test/upstream/output/: duckdb.json  snapshots_changes_map_reference.md
