[project]
name = "ducklake-cdc-e2e-benchmark"
version = "0.0.0"
description = "End-to-end benchmark harness for the ducklake-cdc extension"
requires-python = ">=3.14"
dependencies = [
    "duckdb==1.5.2",
    "ducklake-client>=0.1.2",
    "ducklake-cdc-client>=0.1.0",
    "psycopg[binary]>=3.3.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

# Local sibling checkouts win over PyPI for this workspace. Lets a
# benchmark run against in-flight changes to the python clients without
# publishing first. Comment out (and ``uv lock``) to re-pin to PyPI.
[tool.uv.sources]
ducklake-cdc-client = { path = "../../../ducklake-cdc-python-client", editable = true }
ducklake-client = { path = "../../../ducklake-python-client", editable = true }

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP047"]
